force-app/main/default/objects/HAM_Connection__c/HAM_Connection__c.object-meta.xml
<CustomObject>
    <label>HAM Connection</label>
    <nameField>
        <displayFormat>Con-{00000}</displayFormat>
        <label>HAM Connections Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM_Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>