force-app/main/default/objects/HAM_Connection__c/fields/HAM_Connection_Message__c.field-meta.xml
<CustomField>
    <fullName>HAM_Connection_Message__c</fullName>
    <description>This is the connection message the person sent when they send the connection request</description>
    <inlineHelpText>This is the connection message the person sent when they send the connection request</inlineHelpText>
    <label>HAM Connection Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>