force-app/main/default/objects/HAM_Connection__c/fields/HAM_Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Connection_Status__c</fullName>
    <label>HAM Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Request Sent</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>