force-app/main/default/objects/HAM_Connection__c/fields/HAM_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>HAM_Data_Source__c</fullName>
    <defaultValue>&apos;Portal User&apos;</defaultValue>
    <label>HAM Data Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Portal User</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>