force-app/main/default/objects/HAM_Connection__c/fields/HAM_Is_Blocked__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag sets if the connection is blocked</description>
    <inlineHelpText>This flag sets if the connection is blocked</inlineHelpText>
    <label>HAM Is Blocked</label>
    <type>Checkbox</type>
</CustomField>