force-app/main/default/objects/HAM_Connection__c/fields/HAM_Is_bookmarked__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_bookmarked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Flag indicates someone has been bookmarked for future connections or interactions</description>
    <inlineHelpText>This Flag indicates someone has been bookmarked for future connections or interactions</inlineHelpText>
    <label>HAM Is bookmarked</label>
    <type>Checkbox</type>
</CustomField>