force-app/main/default/objects/HAM_Connection__c/fields/HAM_Is_Connected__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates that both have agreed to connect and a connection is established</description>
    <inlineHelpText>This flag indicates that both have agreed to connect and a connection is established</inlineHelpText>
    <label>HAM Is Connected</label>
    <type>Checkbox</type>
</CustomField>