force-app/main/default/objects/HAM_Connection__c/fields/HAM_Is_favorite__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_favorite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates if some one is marked as Fav within the connections.</description>
    <inlineHelpText>This flag indicates if some one is marked as Fav within the connections. This is the inner circle.</inlineHelpText>
    <label>HAM Is favorite</label>
    <type>Checkbox</type>
</CustomField>