force-app/main/default/objects/HAM_Connection__c/fields/HAM_Linked_Constituent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Linked_Constituent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This lookup is to the person to whom the connection is established, is blocked by the current user</description>
    <inlineHelpText>This lookup is to the person to whom the connection is established, is blocked by the current user</inlineHelpText>
    <label>HAM Linked Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM_Connections (HAM Linked Constituent)</relationshipLabel>
    <relationshipName>HAM_Connections1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>