force-app/main/default/objects/HAM_Connection__c/fields/HAM_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>HAM_Portal_User__c</fullName>
    <description>This is the primary portal user who initiates the conenctions.</description>
    <inlineHelpText>This is the primary portal user who initiates the connections.</inlineHelpText>
    <label>HAM Portal User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM_Connections</relationshipLabel>
    <relationshipName>HAM_Connections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>