force-app/main/default/objects/HAM_Connection__c/fields/HAM_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Rejected_Date__c</fullName>
    <label>HAM Rejected Date</label>
    <type>Date</type>
</CustomField>