force-app/main/default/objects/HAM_Connection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HAM_Connection_Status__c</columns>
    <columns>HAM_Portal_User__c</columns>
    <columns>HAM_Linked_Constituent__c</columns>
    <columns>HAM_Is_Connected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>