force-app/main/default/objects/HAM_Connection__c/listViews/All_Bookmarked.listView-meta.xml
<ListView>
    <fullName>All_Bookmarked</fullName>
    <columns>NAME</columns>
    <columns>HAM_Portal_User__c</columns>
    <columns>HAM_Linked_Constituent__c</columns>
    <columns>HAM_Connection_Status__c</columns>
    <columns>HAM_Is_favorite__c</columns>
    <columns>HAM_Data_Source__c</columns>
    <columns>HAM_Is_Connected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAM_Is_bookmarked__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Bookmarked</label>
</ListView>