force-app/main/default/objects/HAM_Connection__c/listViews/All_Connections.listView-meta.xml
<ListView>
    <fullName>All_Connections</fullName>
    <columns>NAME</columns>
    <columns>HAM_Portal_User__c</columns>
    <columns>HAM_Linked_Constituent__c</columns>
    <columns>HAM_Connection_Status__c</columns>
    <columns>HAM_Is_bookmarked__c</columns>
    <columns>HAM_Is_favorite__c</columns>
    <columns>HAM_Data_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Connections</label>
</ListView>