force-app/main/default/objects/HAM_Connection__c/listViews/All_Rejections.listView-meta.xml
<ListView>
    <fullName>All_Rejections</fullName>
    <columns>NAME</columns>
    <columns>HAM_Portal_User__c</columns>
    <columns>HAM_Linked_Constituent__c</columns>
    <columns>HAM_Connection_Status__c</columns>
    <columns>HAM_Data_Source__c</columns>
    <columns>HAM_Is_Blocked__c</columns>
    <columns>HAM_Rejected_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAM_Is_Connected__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>HAM_Connection_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>All Rejections</label>
</ListView>