force-app/main/default/objects/HAM_Connection__c/listViews/Favorites.listView-meta.xml
<ListView>
    <fullName>Favorites</fullName>
    <columns>NAME</columns>
    <columns>HAM_Is_Blocked__c</columns>
    <columns>HAM_Linked_Constituent__c</columns>
    <columns>HAM_Portal_User__c</columns>
    <columns>HAM_Data_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAM_Is_favorite__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Favorites</label>
</ListView>