force-app/main/default/objects/HAM_Connection__c/listViews/Rejected_Request.listView-meta.xml
<ListView>
    <fullName>Rejected_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAM_Connection_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Request</label>
</ListView>